--- a/home/templates/home/rules.html
+++ b/home/templates/home/rules.html
@@ -32,7 +32,7 @@
 
 <a name="format"></a><h3>Round Format</h3>
 <ol class="top">
-    <li><b>The Individual round</b> consists of two tests, each with eight questions and lasting thirty minutes. Individual Tests in the Zermelo division are on two subjects among <b>Algebra</b>, <b>Geometry</b>, <b>Counting and Probability</b>, and <b>Number Theory</b>. Individual Tests in the Dedekind division include problems from all subjects.</li> 
+    <li><b>The Individual round</b> consists of two tests, each with eight questions and lasting thirty minutes. Individual Tests are on two subjects among <b>Algebra</b>, <b>Geometry</b>, <b>Counting and Probability</b>, and <b>Number Theory</b>.</li> 
     <li><b>The Team round</b> contains fifteen questions for all team members to collaboratively solve in 45 minutes.</li>
     <li><b>The Guts round</b> is an intense but exciting round in which competing teams can see each others’ progress. It is 60 minutes long, is graded live, and requires each team to work together on progressively harder five-problem sets. Each new set is worth more points than the previous set. <b class="red">Different divisions will have different Guts round questions</b>. Note that <b>there are no benefits of turning in the last set early</b>. There are no bonus points for timing. Please also note that <b class="red">the weighting system for the later problems has been tweaked</b> to more accurately reflect difficulty.
     <li><b>The Fun round</b> is an exciting, new round consisting of several separate mini-events, including puzzles, trivia, and an estimation round.</li>
