update registration message

--- a/coaches/templates/coaches/register.html
+++ b/coaches/templates/coaches/register.html
@@ -25,8 +25,8 @@
 </form>
 {% else %}
 <p>
-    At the moment, registration is closed as there is no competition in progress or planned!
-    Please email the contest runners at <script type="text/javascript">email("mbhsmathteam", "gmail.com")</script> for more information.
+    At the moment, registration is closed.
+    If you would still like to register teams, please email the contest runners at <script type="text/javascript">email("mbhsmathteam", "gmail.com")</script>.
 </p>
 {% endif %}
 
