--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -40,15 +40,16 @@ It is currently maintained by <a href="https://www.vijayrs.com/" target="_blank"
 It's written in <a href="https://djangoproject.com">Django</a> and hosted on our school servers.
 The source is on <a href="https://github.com/mbhs/mbmt">Github</a>.
 
-<h2>Past Sponsors</h2>
+<h2>Sponsors</h2>
 
-<p>Past contests have been sponsored by the Montgomery Blair Magnet Foundation, Art of Problem Solving, Expii, and Maplesoft.</p>
+<p>MBMT is sponsored by the Montgomery Blair Magnet Foundation, Art of Problem Solving, Daily Challenge, MCPS Food & Nutrition Services, and StickerGiant.</p>
 
 <div class="sponsors">
     <a href="http://www.mbhsmagnet.org/"><img src="{% static "images/magnet.jpg" %}" height="150px"></a>
     <a href="https://artofproblemsolving.com/"><img src="{% static "images/aops.png" %}" style="margin-left: 1rem;"></a>
     <a href="https://daily.poshenloh.com/"><img src="{% static "images/dailychallenge.png" %}" style="margin-left: 1rem;"></a>
-    <a href="https://www.maplesoft.com/"><img src="{% static "images/maplesoft.jpg" %}" style="margin-left: 1rem;"></a>
+    <a href="https://www.montgomeryschoolsmd.org/departments/food-and-nutrition/"><img src="{% static "images/mcpsfood.png" %}" style="margin-left: 1rem;"></a>
+    <a href="https://www.stickergiant.com/"><img src="{% static "images/stickergiant.png" %}" style="margin-left: 1rem;"></a>
 </div>
 
 {% endblock %}
