--- a/home/templates/home/archive.html
+++ b/home/templates/home/archive.html
@@ -29,6 +29,75 @@ a round since we haven't done every round every year. In each year, the more dif
 
         <tbody>
             <tr>
+                <th rowspan="2">2022</th>
+                <th>Dedekind</th>
+                <td>
+                    <a href="{% static 'archive/2022/dedekind/algebra.pdf' %}" target="_blank">Problems</a>
+                    <br>-
+                </td>
+                <td>
+                    <a href="{% static 'archive/2022/dedekind/geo.pdf' %}" target="_blank">Problems</a>
+                    <br>-
+                </td>
+                <td>
+                    <a href="{% static 'archive/2022/dedekind/combo.pdf' %}" target="_blank">Problems</a>
+                    <br>-
+                </td>
+                <td>
+                    <a href="{% static 'archive/2022/dedekind/nt.pdf' %}" target="_blank">Problems</a>
+                    <br>-
+                </td>
+                <td>
+                    -
+                </td>
+                <td>
+                    <a href="{% static 'archive/2022/dedekind/team.pdf' %}" target="_blank">Problems</a>
+                    <br>-
+                </td>
+                <td rowspan="2">
+					-
+				</td>
+                <td>
+                    <a href="{% static 'archive/2022/dedekind/guts.pdf' %}" target="_blank">Problems</a> 
+                    <br>-
+                </td>
+            </tr>
+
+            <tr>
+                <th>Zermelo</th>
+                <td>
+                    <a href="{% static 'archive/2022/zermelo/algebra.pdf' %}" target="_blank">Problems</a>
+                    <br>-
+                </td>
+                <td>
+                    <a href="{% static 'archive/2022/zermelo/geo.pdf' %}" target="_blank">Problems</a>
+                    <br>-
+                </td>
+                <td>
+                    <a href="{% static 'archive/2022/zermelo/combo.pdf' %}" target="_blank">Problems</a>
+                    <br>-
+                </td>
+                <td>
+                    <a href="{% static 'archive/2022/zermelo/nt.pdf' %}" target="_blank">Problems</a>
+                    <br>-
+                </td>
+                <td>
+                    -
+                </td>
+                <td>
+                    <a href="{% static 'archive/2022/zermelo/team.pdf' %}" target="_blank">Problems</a>
+                    <br>-
+                </td>
+                <td rowspan="2">
+					-
+				</td>
+                <td>
+                    <a href="{% static 'archive/2022/zermelo/guts.pdf' %}" target="_blank">Problems</a> 
+                    <br>-
+                </td>
+            </tr>
+
+            <tr>
                 <th rowspan="1">2020</th>
                 <th>Online</th>
                 <td>
