added guts instructions, problems, and solutions

--- a/home/templates/home/archive.html
+++ b/home/templates/home/archive.html
@@ -55,7 +55,9 @@ a round since we haven't done every round every year. In each year, the more dif
                     <br>-
                 </td>
                 <td rowspan="2">
-					-
+					<a href="{% static 'archive/2022/guts_instructions.pdf' %}" target="_blank">Instructions</a>
+                    <a href="{% static 'archive/2022/guts_problems.pdf' %}" target="_blank">Problems</a>
+                    <a href="{% static 'archive/2022/guts_solutions.pdf' %}" target="_blank">Solutions</a>
 				</td>
                 <td>
                     <a href="{% static 'archive/2022/dedekind/guts.pdf' %}" target="_blank">Problems</a> 
