--- a/home/templates/home/archive.html
+++ b/home/templates/home/archive.html
@@ -55,8 +55,8 @@ a round since we haven't done every round every year. In each year, the more dif
                     <br>-
                 </td>
                 <td rowspan="2">
-					<a href="{% static 'archive/2022/guts_instructions.pdf' %}" target="_blank">Instructions</a>
-                    <a href="{% static 'archive/2022/guts_problems.pdf' %}" target="_blank">Problems</a>
+					<a href="{% static 'archive/2022/guts_instructions.pdf' %}" target="_blank">Instructions</a><br>
+                    <a href="{% static 'archive/2022/guts_problems.pdf' %}" target="_blank">Problems</a><br>
                     <a href="{% static 'archive/2022/guts_solutions.pdf' %}" target="_blank">Solutions</a>
 				</td>
                 <td>
