--- a/home/templates/home/archive.html
+++ b/home/templates/home/archive.html
@@ -33,26 +33,26 @@ a round since we haven't done every round every year. In each year, the more dif
                 <th>Dedekind</th>
                 <td>
                     <a href="{% static 'archive/2022/dedekind/algebra.pdf' %}" target="_blank">Problems</a>
-                    <br>-
+                    <br><a href="{% static 'archive/2022/dedekind/algebra_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
                 <td>
                     <a href="{% static 'archive/2022/dedekind/geo.pdf' %}" target="_blank">Problems</a>
-                    <br>-
+                    <br><a href="{% static 'archive/2022/dedekind/geo_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
                 <td>
                     <a href="{% static 'archive/2022/dedekind/combo.pdf' %}" target="_blank">Problems</a>
-                    <br>-
+                    <br><a href="{% static 'archive/2022/dedekind/combo_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
                 <td>
                     <a href="{% static 'archive/2022/dedekind/nt.pdf' %}" target="_blank">Problems</a>
-                    <br>-
+                    <br><a href="{% static 'archive/2022/dedekind/nt_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
                 <td>
                     -
                 </td>
                 <td>
                     <a href="{% static 'archive/2022/dedekind/team.pdf' %}" target="_blank">Problems</a>
-                    <br>-
+                    <br><a href="{% static 'archive/2022/dedekind/team_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
                 <td rowspan="2">
 					<a href="{% static 'archive/2022/fun_instructions.pdf' %}" target="_blank">Instructions</a><br>
@@ -69,26 +69,26 @@ a round since we haven't done every round every year. In each year, the more dif
                 <th>Zermelo</th>
                 <td>
                     <a href="{% static 'archive/2022/zermelo/algebra.pdf' %}" target="_blank">Problems</a>
-                    <br>-
+                    <br><a href="{% static 'archive/2022/zermelo/algebra_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
                 <td>
                     <a href="{% static 'archive/2022/zermelo/geo.pdf' %}" target="_blank">Problems</a>
-                    <br>-
+                    <br><a href="{% static 'archive/2022/zermelo/geo_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
                 <td>
                     <a href="{% static 'archive/2022/zermelo/combo.pdf' %}" target="_blank">Problems</a>
-                    <br>-
+                    <br><a href="{% static 'archive/2022/zermelo/combo_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
                 <td>
                     <a href="{% static 'archive/2022/zermelo/nt.pdf' %}" target="_blank">Problems</a>
-                    <br>-
+                    <br><a href="{% static 'archive/2022/zermelo/nt_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
                 <td>
                     -
                 </td>
                 <td>
                     <a href="{% static 'archive/2022/zermelo/team.pdf' %}" target="_blank">Problems</a>
-                    <br>-
+                    <br><a href="{% static 'archive/2022/zermelo/team_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
                 <td>
                     <a href="{% static 'archive/2022/zermelo/guts.pdf' %}" target="_blank">Problems</a> 
