--- a/home/templates/home/archive.html
+++ b/home/templates/home/archive.html
@@ -61,7 +61,7 @@ a round since we haven't done every round every year. In each year, the more dif
 				</td>
                 <td>
                     <a href="{% static 'archive/2022/dedekind/guts.pdf' %}" target="_blank">Problems</a> 
-                    <br>-
+                    <br><a href="{% static 'archive/2022/dedekind/guts_key.pdf' %}" target="_blank">Solutions</a> 
                 </td>
             </tr>
 
@@ -92,7 +92,7 @@ a round since we haven't done every round every year. In each year, the more dif
                 </td>
                 <td>
                     <a href="{% static 'archive/2022/zermelo/guts.pdf' %}" target="_blank">Problems</a> 
-                    <br>-
+                    <br><a href="{% static 'archive/2022/zermelo/guts_key.pdf' %}" target="_blank">Solutions</a> 
                 </td>
             </tr>
 
