--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<h1 class="title lowerer"><span class="title-left">MB</span><span class="title-right">MT</span></h1>
+<h1 class="title">MBMT</h1>
 
 <br/>
 
