--- a/home/templates/shared/base.html
+++ b/home/templates/shared/base.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 
-<html lang="en">
+<html lang="en" data-theme="dark">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
