--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -5,15 +5,16 @@
 
 <h1 class="title">MBMT</h1>
 
+<div class="title-date">
+    <div class="line"></div>
+    <p class="main-text">March 16, 2024</p>
+    <div class="line"></div>
+</div>
 <br/>
 
-<p class="main-title">The Montgomery Blair Math Tournament</p>
-
-
 <p class="main-text">
+    <span>The Montgomery Blair Math Tournament</span><br>
     <span>A mathematics competition for middle school students in the Maryland area</span>
-    <span>Join us on March 16, 2024</span>
-    <a href="{% url "coaches:register" %}" style="color: #ba2222">Register &#x276f;</a>
 </p>
 
 <!-- <p class="main-text" style="font-weight:bold;color:#ba2222">Due to COVID-19, MBMT 6 will be held online this year.</p> -->
@@ -40,7 +41,7 @@
 </p>
 -->
 
-<div class="row">
+<div class="row text-center">
     <div class="col-lg-4">
         <h2>Solve problems.</h2>
         <p><strong>MBMT is all about math.</strong> Whether you're just a beginner or a super Mathlete, you'll find
