--- a/home/templates/home/info.html
+++ b/home/templates/home/info.html
@@ -3,6 +3,7 @@
 {% block content %}
 
 <h1 class="lowerer">Contest Information</h1>
+<div class="line"></div>
 <p>
     MBMT is a free middle school math competition that seeks to excite students’ interests in mathematics and in pursuing mathematics beyond the school curriculum. We are pleased to announce that, for the 2023 year, the Montgomery Blair Math Team is hosting the 8th Montgomery Blair Math Tournament (MBMT 8) on <b>March 16th, 2024!</b>
 </p>
