--- a/home/templates/shared/base.html
+++ b/home/templates/shared/base.html
@@ -22,7 +22,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="{% url "home:index" %}">MBMT</a>
+                    <a class="navbar-brand bg-primary" href="{% url "home:index" %}">MBMT</a>
                 </div>
                 <div class="collapse navbar-collapse" id="nav-collapse">
                     <ul class="nav navbar-nav navbar-left">
@@ -80,8 +80,8 @@
                         {% endif %}
                         <li><a href="{% url "home:logout" %}">Logout</a></li>
                         {% else %}
-                        <li><a href="{% url "coaches:register" %}">Register</a></li>
-                        <!-- <li><a href="{% url "home:login" %}">Login</a></li> -->
+                        <li><a href="{% url "home:login" %}">Login</a></li>
+                        <li><a href="{% url "coaches:register" %}" class="bg-primary">Register</a></li>
                         {% endif %}
                         {% endblock %}
                     </ul>
