--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -4,6 +4,7 @@
 {% block content %}
 
 <h1 class="lowerer">About Us</h1>
+<div class="line"></div>
 
 MBMT is proudly organized and executed entirely by students from the Montgomery Blair High School Math Team.
 
