--- a/home/templates/home/archive.html
+++ b/home/templates/home/archive.html
@@ -4,6 +4,7 @@
 {% block content %}
 
 <h1 class="lowerer">Archive</h1>
+<div class="line"></div>
 
 Here we're keeping all of past year's problems and solutions, as well as contest results. Some years might be missing
 a round since we haven't done every round every year. In each year, the more difficult division is listed second.
@@ -28,7 +29,7 @@ a round since we haven't done every round every year. In each year, the more dif
         </thead>
 
         <tbody>
-	<tr>
+            <tr>
                 <th rowspan="2">2023</th>
                 <th>Bernoulli</th>
                 <td>
