--- a/home/templates/home/rules.html
+++ b/home/templates/home/rules.html
@@ -4,6 +4,7 @@
 {% block content %}
 
 <h1 class="lowerer">Official Rules</h1>
+<div class="line"></div>
 <p>
     Welcome to the eighth annual Montgomery Blair Math Tournament, or MBMT for short!
     MBMT is a free middle school math contest that seeks to inspire students' interest in mathematics and to encourage them to explore math beyond the school curriculum.
