--- a/coaches/templates/coaches/register.html
+++ b/coaches/templates/coaches/register.html
@@ -10,6 +10,7 @@
 {% block content %}
 
 <h2 class="lower">Team Registration</h2>
+<div class="line"></div>
 {% if competition.can_register %}
 <p>
     Welcome to the {{ competition.year }} annual MBMT, held on {{ competition.date }}!
