--- a/home/templates/home/login.html
+++ b/home/templates/home/login.html
@@ -5,6 +5,7 @@
 {% block content %}
 
 <h2 class="lowererer">Login</h2>
+<div class="line"></div>
 
 <form name="registration" data-toggle="validator" role="form" method="post">
     {% csrf_token %}
