fixed archive page colors

--- a/coaches/templates/coaches/schools.html
+++ b/coaches/templates/coaches/schools.html
@@ -10,6 +10,7 @@
 {% block content %}
 
 <h1>School Registration</h1>
+<div class="line"></div>
 <p>
     Please select the school you will be coaching for {{ competition.name }}.
     Only one coach is permitted per school.
