--- a/home/templates/home/archive.html
+++ b/home/templates/home/archive.html
@@ -12,7 +12,7 @@ a round since we haven't done every round every year. In each year, the more dif
 <br/><br/>
 
 <div class="table-responsive">
-    <table class="table table-hover table-striped">
+    <table class="table table-striped">
         <thead>
             <tr>
                 <th>Year</th>
