--- a/coaches/templates/coaches/register.html
+++ b/coaches/templates/coaches/register.html
@@ -18,6 +18,7 @@
     <br /><br />
 
     Here is the <a href="https://docs.google.com/forms/d/1Zo3dyR_Aayv3xGduzcfdgUhmQexc3vB5C_KppBfHAfk/edit">registration form</a> for this year!
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSccT6tRxtHpCR5Y7Us5l6BsD0PKwjAbBQWWAPzR3rIsDNAynw/viewform?embedded=true" width="100%" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 </p>
 <!-- <form name="registration" data-toggle="validator" role="form" method="post"> -->
 <!--     {% crispy form %} -->
