--- a/coaches/templates/coaches/register.html
+++ b/coaches/templates/coaches/register.html
@@ -12,7 +12,7 @@
 <h2 class="lower">Team Registration</h2>
 {% if competition.can_register %}
 <p>
-    Welcome to the {{ competition.year }} annual MBMT, held on {{ competition.date }}!
+    Welcome to MBMT IX, held on {{ competition.date }}!
     We highly encourage schools' math team coaches or math resource department chairs to act as sponsors; however, any adult who is willing to supervise the team is fine.
 
     <br /><br />
