small fix to rules page

--- a/home/templates/home/rules.html
+++ b/home/templates/home/rules.html
@@ -14,7 +14,7 @@ Welcome to the ninth annual Montgomery Blair Math Tournament, or MBMT for short!
         The math team sponsors of each school/organization register individual student teams through the website via the <a href="{% url "coaches:register" %}">registration page</a>.
         There is no limit to the number of full teams a school or organization may send.
     </li>
-    <li><b class="red">Division A (Gödel) only: Subject Tests are specifically limited.</b>. The goal of this policy is twofold: to make the subjects more competitive and balanced, and to perhaps introduce other topics of math not normally found in the classroom setting.</li>
+    <li><b class="red">Division A (Gödel) only: Subject Tests are specifically limited.</b> The goal of this policy is twofold: to make the subjects more competitive and balanced, and to perhaps introduce other topics of math not normally found in the classroom setting.</li>
     <ol>
         <!-- <li>Each full team of 5 will be required to have at least 2 tests per subject. For example, it is not allowed to have only one student on a team of 5 take the Algebra Subject Test.</li> -->
         <!-- <li>A team of 4 will be required to have at least 1 test per subject, but no more than 3 tests per subject.</li> -->
