--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -46,11 +46,11 @@ The source is on <a href="https://github.com/mbhs/mbmt">Github</a>.
 
 <div class="sponsors">
     <a href="http://www.mbhsmagnet.org/"><img src="{% static "images/magnet.jpg" %}" height="150px"></a>
-    <a href="https://artofproblemsolving.com/"><img src="{% static "images/aopslogo.png" %}" style="margin-left: 1rem; max-width: 400px;"></a>
-    <a href="https://www.wolfram.com/"><img src="{% static "images/wolfram.png" %}" style="margin-left: 1rem; max-width: 200px;"></a>
-    <a href="https://daily.poshenloh.com/"><img src="{% static "images/dailychallenge.png" %}" style="margin-left: 1rem;"></a>
+    <a href="https://artofproblemsolving.com/"><img src="{% static "images/aopslogo.png" %}" style="margin-left: 1rem; width: 400px; max-width: 80vw;"></a>
+    <a href="https://www.wolfram.com/"><img src="{% static "images/wolfram.png" %}" style="margin-left: 1rem; width: 200px; max-width: 80vw;"></a>
+    <a href="https://daily.poshenloh.com/"><img src="{% static "images/dailychallenge.png" %}" style="margin-left: 1rem; max-width: 80vw;"></a>
     <a href="https://janestreet.com"><img src="{% static "images/jane-street.png" %}" height="125px" style="margin-left: 1rem;"></a>
-    <a href="https://www.montgomeryschoolsmd.org/departments/food-and-nutrition/"><img src="{% static "images/mcpsfood.png" %}" style="margin-left: 1rem; max-width: 450px;"></a>
+    <a href="https://www.montgomeryschoolsmd.org/departments/food-and-nutrition/"><img src="{% static "images/mcpsfood.png" %}" style="margin-left: 1rem; width: 450px; max-width: 80vw;"></a>
 </div>
 
 {% endblock %}
