added am name to text

--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -42,7 +42,7 @@ The source is on <a href="https://github.com/mbhs/mbmt">Github</a>.
 
 <h2>Sponsors</h2>
 
-<p>MBMT is sponsored by the Montgomery Blair Magnet Foundation, Wolfram Mathematica, Art of Problem Solving, Daily Challenge, MCPS Food & Nutrition Services, and Jane Street.</p>
+<p>MBMT is sponsored by the Montgomery Blair Magnet Foundation, Wolfram Mathematica, Art of Problem Solving, Daily Challenge, MCPS Food & Nutrition Services, AwesomeMath, and Jane Street.</p>
 
 <div class="sponsors">
     <a href="http://www.mbhsmagnet.org/"><img src="{% static "images/magnet.jpg" %}" width="150px"></a>
