--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -52,6 +52,7 @@ The source is on <a href="https://github.com/mbhs/mbmt">Github</a>.
     <a href="https://janestreet.com"><img src="{% static "images/jane-street.png" %}" width="300px" style="margin-left: 1rem; max-width: 80vw;"></a>
     <a href="https://www.montgomeryschoolsmd.org/departments/food-and-nutrition/"><img src="{% static "images/mcpsfood.png" %}" style="margin-left: 1rem; width: 300px; max-width: 80vw;"></a>
     <a href="https://www.awesomemath.org/"><img src="{% static "images/amsp.png" %}" style="margin-left: 1rem; width: 200px; max-width: 80vw;"></a>
+    <a href="https://live.poshenloh.com/"><img src="{% static "images/live.png" %}" style="margin-left: 1rem; width: 200px; max-width: 80vw;"></a>
 </div>
 
 {% endblock %}
