--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -42,13 +42,12 @@ The source is on <a href="https://github.com/mbhs/mbmt">Github</a>.
 
 <h2>Sponsors</h2>
 
-<p>MBMT is sponsored by the Montgomery Blair Magnet Foundation, Wolfram Mathematica, Art of Problem Solving, Daily Challenge, MCPS Food & Nutrition Services, AwesomeMath, and Jane Street.</p>
+<p>MBMT is sponsored by the Montgomery Blair Magnet Foundation, Wolfram Mathematica, Art of Problem Solving, MCPS Food & Nutrition Services, AwesomeMath, Jane Street, and LIVE by Po-Shen Loh.</p>
 
 <div class="sponsors">
     <a href="http://www.mbhsmagnet.org/"><img src="{% static "images/magnet.jpg" %}" width="150px"></a>
     <a href="https://artofproblemsolving.com/"><img src="{% static "images/aopslogo.png" %}" style="margin-left: 1rem; width: 400px; max-width: 80vw;"></a>
     <a href="https://www.wolfram.com/"><img src="{% static "images/wolfram.png" %}" style="margin-left: 1rem; width: 200px; max-width: 80vw;"></a>
-    <a href="https://daily.poshenloh.com/"><img src="{% static "images/dailychallenge.png" %}" style="margin-left: 1rem; max-width: 80vw;"></a>
     <a href="https://janestreet.com"><img src="{% static "images/jane-street.png" %}" width="300px" style="margin-left: 1rem; max-width: 80vw;"></a>
     <a href="https://www.montgomeryschoolsmd.org/departments/food-and-nutrition/"><img src="{% static "images/mcpsfood.png" %}" style="margin-left: 1rem; width: 300px; max-width: 80vw;"></a>
     <a href="https://www.awesomemath.org/"><img src="{% static "images/amsp.png" %}" style="margin-left: 1rem; width: 200px; max-width: 80vw;"></a>
