--- a/home/templates/home/info.html
+++ b/home/templates/home/info.html
@@ -32,7 +32,7 @@ The Team Round contains fifteen questions for all team members to collaborativel
 After hosting the tournament for several years, we have worked hard to calibrate the accessibility and difficulty of problems in both divisions. Our guiding philosophy is that every participant in MBMT should find the rounds approachable yet challenging.
 </p>
 <p>
-Individual and team winners in each division will receive medals or trophies! Team scores are calculated using Team and Guts Round scores, combined with a weighted average of individual scores, and teams with the highest scores in each division win. The individual awards are for high-scoring individuals overall and in each subject test. There are also additional awards for high performance on the Guts Round. Finally, we will also recognize the highest-scoring 6th-grade student in the <b>Gödel Division</b>.
+Individual and team winners in each division will receive medals or trophies! Team scores are calculated using Team and Guts Round scores, combined with a weighted average of individual scores, and teams with the highest scores in each division win. The individual awards are for high-scoring individuals overall and in each subject test. Finally, we will also recognize the highest-scoring 6th-grade student in each of the divisions.
 </p>
 
 {% if competition %}
