--- a/home/templates/home/archive.html
+++ b/home/templates/home/archive.html
@@ -29,6 +29,71 @@ a round since we haven't done every round every year. In each year, the more dif
 
         <tbody>
 	<tr>
+                <th rowspan="2">2024</th>
+                <th>Brahmagupta</th>
+                <td>
+                    <a href="{% static 'archive/2024/brahmagupta/algebra.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2024/brahmagupta/algebra_key.pdf' %}" target="_blank">Solutions</a>
+                </td>
+                <td>
+                    <a href="{% static 'archive/2024/brahmagupta/geo.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2024/brahmagupta/geo_key.pdf' %}" target="_blank">Solutions</a>
+                </td>
+                <td>
+                    <a href="{% static 'archive/2024/brahmagupta/combo.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2024/brahmagupta/combo_key.pdf' %}" target="_blank">Solutions</a>
+                </td>
+                <td>
+                    <a href="{% static 'archive/2024/brahmagupta/nt.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2024/brahmagupta/nt_key.pdf' %}" target="_blank">Solutions</a>
+                </td>
+                <td>
+                    -
+                </td>
+                <td>
+                    <a href="{% static 'archive/2024/brahmagupta/team.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2024/brahmagupta/team_key.pdf' %}" target="_blank">Solutions</a>
+                </td>
+                <td rowspan="2">
+                    <!-- Add Fun problems and solutions links if available -->
+                </td>
+                <td>
+                    <a href="{% static 'archive/2024/brahmagupta/guts.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2024/brahmagupta/guts_key.pdf' %}" target="_blank">Solutions</a>
+                </td>
+            </tr>
+
+            <tr>
+		    <th>Godel</th>
+            <td>
+                <a href="{% static 'archive/2024/godel/algebra.pdf' %}" target="_blank">Problems</a>
+                <br><a href="{% static 'archive/2024/godel/algebra_key.pdf' %}" target="_blank">Solutions</a>
+            </td>
+            <td>
+                <a href="{% static 'archive/2024/godel/geo.pdf' %}" target="_blank">Problems</a>
+                <br><a href="{% static 'archive/2024/godel/geo_key.pdf' %}" target="_blank">Solutions</a>
+            </td>
+            <td>
+                <a href="{% static 'archive/2024/godel/combo.pdf' %}" target="_blank">Problems</a>
+                <br><a href="{% static 'archive/2024/godel/combo_key.pdf' %}" target="_blank">Solutions</a>
+            </td>
+            <td>
+                <a href="{% static 'archive/2024/godel/nt.pdf' %}" target="_blank">Problems</a>
+                <br><a href="{% static 'archive/2024/godel/nt_key.pdf' %}" target="_blank">Solutions</a>
+            </td>
+            <td>
+                -
+            </td>
+            <td>
+                <a href="{% static 'archive/2024/godel/team.pdf' %}" target="_blank">Problems</a>
+                <br><a href="{% static 'archive/2024/godel/team_key.pdf' %}" target="_blank">Solutions</a>
+            </td>
+            <td>
+                <a href="{% static 'archive/2024/godel/guts.pdf' %}" target="_blank">Problems</a>
+                <br><a href="{% static 'archive/2024/godel/guts_key.pdf' %}" target="_blank">Solutions</a>
+            </td>
+        </tr>
+	<tr>
                 <th rowspan="2">2023</th>
                 <th>Bernoulli</th>
                 <td>
