update home and info pages

--- a/home/templates/home/info.html
+++ b/home/templates/home/info.html
@@ -4,18 +4,18 @@
 
 <h1 class="lowerer">Contest Information</h1>
 <p>
-    MBMT is a free middle school math competition that seeks to excite students’ interests in mathematics and in pursuing mathematics beyond the school curriculum. We are pleased to announce that, for the 2024 year, the Montgomery Blair Math Team is hosting the 9th Montgomery Blair Math Tournament (MBMT 9) on <b>March 9th, 2024!</b>
+    MBMT is a free middle school math competition that seeks to excite students’ interests in mathematics and in pursuing mathematics beyond the school curriculum. We are pleased to announce that, for the 2025 year, the Montgomery Blair Math Team is hosting the 10th Montgomery Blair Math Tournament (MBMT X) on <b>March 9th, 2025!</b>
 </p>
 
 <h3>Registration</h3>
 <p>
-Registration will open on <b>Monday, January 8th, 2024</b>. We would like all math team sponsors to register their teams by <b>Saturday, February 17th, 2024</b>. This will help us estimate the number of teams participating and assist us with logistics. Please take note that if you don’t register by this date, you might not receive our free swag. To register, visit <a href="{% url "coaches:register" %}">here</a>. For more details on registration, see our <a href="{% url "home:rules" %}">Rules page</a>.
+Registration will open on <b>Monday, October 7th, 2025</b>. We would like all math team sponsors to register their teams by <b>Saturday, February 9th, 2025</b>. This will help us estimate the number of teams participating and assist us with logistics. Please take note that if you don’t register by this date, you might not receive our free swag. To register, visit <a href="{% url "coaches:register" %}">here</a>. For more details on registration, see our <a href="{% url "home:rules" %}">Rules page</a>.
 </p>
 
 {% if competition %}
 <h3>Logistics</h3>
 <p>
-MBMT 9 will occur at <b>Montgomery Blair High School</b> on Saturday, March 9th, 2024 from 12:00 - 7:00 pm. Our address is <a href="https://goo.gl/maps/QUudw1ir4JPsHSL98">51 University Blvd E, Silver Spring, MD 20901</a>. Please arrive on the University Boulevard side of the school. Thanks to the generosity of the Montgomery County Division of Food & Nutrition Services, <b>FREE lunch and dinner will be provided to all competitors</b>. Additionally, dinner will be provided for coaches. Coaches and participants are invited to bring snacks for their own team.
+MBMT X will occur at <b>Montgomery Blair High School</b> on Saturday, March 9th, 2025 from 1:00 - 7:00 pm. Our address is <a href="https://goo.gl/maps/QUudw1ir4JPsHSL98">51 University Blvd E, Silver Spring, MD 20901</a>. Please arrive on the University Boulevard side of the school. Thanks to the generosity of the Montgomery County Division of Food & Nutrition Services, <b>FREE lunch and dinner will be provided to all competitors</b>. Additionally, dinner will be provided for coaches. Coaches and participants are invited to bring snacks for their own team.
 
 </p>
 
@@ -23,27 +23,27 @@ MBMT 9 will occur at <b>Montgomery Blair High School</b> on Saturday, March 9th,
 
 <h3>Contest</h3>
 <p>
-MBMT consists of four rounds: Individual Round, Team Round, Guts Round, and Fun Round. Both the Gödel (upper) and Brahmagupta (lower) divisions will take Individual Subject Tests (of which students take two subjects among Algebra, Geometry, Counting and Probability, and Number Theory). Each Subject Test consists of eight questions and lasts thirty minutes. Each Individual Test consists of eight questions and lasts thirty minutes.
+MBMT consists of four rounds: Individual Round, Team Round, Guts Round, and Fun Round. Both the Erdős (lower) and Weierstrass (upper) divisions will take Individual Subject Tests (of which students take two subjects among Algebra, Geometry, Counting and Probability, and Number Theory). Each Individual Subject Test consists of eight questions and lasts thirty minutes.
 </p>
 <p>
-The Team Round contains fifteen questions for all team members to collaboratively solve in forty-five minutes. The Guts Round is an hour-long round that is graded live and requires team members to work together on progressively harder five-problem sets, each of which is worth more points than the previous set. The Fun Round is an exciting round consisting of several separate mini-events, including puzzles, trivia, and an estimation round.
+The Team Round has fifteen questions for all team members to collaboratively solve in forty-five minutes. The Guts Round is an hour-long round that is graded live and requires team members to work together on progressively harder five-problem sets, each of which is worth more points than the previous set. The Fun Round is an exciting round consisting of several separate mini-events, including puzzles, trivia, and an estimation round.
 </p>
 <p>
 After hosting the tournament for several years, we have worked hard to calibrate the accessibility and difficulty of problems in both divisions. Our guiding philosophy is that every participant in MBMT should find the rounds approachable yet challenging.
 </p>
 <p>
-Individual and team winners in each division will receive medals or trophies! Team scores are calculated using Team and Guts Round scores, combined with a weighted average of individual scores, and teams with the highest scores in each division win. The individual awards are for high-scoring individuals overall and in each subject test. Finally, we will also recognize the highest-scoring 6th-grade student in each of the divisions.
+Individual and team winners in each division will receive medals or trophies! Team scores are calculated using Team and Guts Round scores, combined with a weighted average of individual scores, and teams with the highest scores in each division win. The individual awards are for high-scoring individuals overall and in each subject test. There are also additional awards for high performance on the Guts Round. Finally, we will also recognize the highest-scoring 6th-grade student in the <b>Erdős</b> Division.
 </p>
 
 {% if competition %}
 <h3>Schedule</h3>
 <table class="schedule">
-    <tr><td>12:15 - 12:45 PM</td><td>Registration and Lunch</td></tr>
-    <tr><td>1:00 - 1:30 PM</td><td>Subject Test #1</td></tr>
-    <tr><td>1:40 - 2:10 PM</td><td>Subject Test #2</td></tr>
-    <tr><td>2:15 - 2:45 PM</td><td>Break</td></tr>
-    <tr><td>2:50 - 3:40 PM</td><td>Team Round</td></tr>
-    <tr><td>3:45 - 5:00 PM</td><td>Guts Round</td></tr>
+    <tr><td>12:30 - 1:00 PM</td><td>Registration and Lunch</td></tr>
+    <tr><td>1:15 - 1:45 PM</td><td>Subject Test #1</td></tr>
+    <tr><td>1:55 - 2:25 PM</td><td>Subject Test #2</td></tr>
+    <tr><td>2:30 - 3:00 PM</td><td>Break</td></tr>
+    <tr><td>3:05 - 3:50 PM</td><td>Team Round</td></tr>
+    <tr><td>4:00 - 5:00 PM</td><td>Guts Round</td></tr>
     <tr><td>5:00 - 6:00 PM</td><td>Tiebreakers and Dinner</td></tr>
     <tr><td>5:30 - 6:15 PM</td><td>Fun Round</td></tr>
     <tr><td>6:20 - 7:00 PM</td><td>Awards Ceremony</td></tr>
